QPID-8425: Fix for channel leak on federation links